changes made for physical redesign,fixing the art module' tile image stretching

--- a/account/static/css/styles.css
+++ b/account/static/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
-
+@import url(http://fonts.googleapis.com/css?family=Quicksand);
 body{
     background: #f4f4f4;
 }
@@ -202,9 +202,9 @@ margin:0 auto;
 
 
 .aboutus-container {
-  width: 60%;
-  text-align: center;
-  margin: 0 auto;
+    /* width: 60%; */
+    text-align: center;
+    margin: 0 auto;
 }
 
 .aboutus-container-parent{
@@ -217,8 +217,8 @@ margin:0 auto;
 }
 
 .aboutus-container p{
-  line-height: 150%;
-
+    line-height: 150%;
+    font-size: 28px;
 }
 
 /* styling the affirmations popup - karthik*/
@@ -239,7 +239,8 @@ max-width: 500px;
 height: 100%;
 }
 .affirmations-text{
-display: block
+display: block;
+text-align:center;
 }
 .text-center{
 text-align: center;
@@ -292,15 +293,18 @@ margin: 0 auto;
 box-shadow: none;
 border-bottom:none;
 }
+h1{
+  font-weight: bold !important;
+}
 
 .physical-post-page .rich-text{
 width: 100%
 }
-.rich-text-images{
+.strength-images-array,.agility-images-array,.flexibility-images-array{
 float: left;
 width: 50%;
 }
-.rich-text-paragraphs{
+.strength-paragraphs,.agility-paragraphs,.flexibility-paragraphs{
   float: right;
   width: 45%;
 }
@@ -308,6 +312,15 @@ width: 50%;
 margin-bottom: 10px;
 width: 100%;
 }
+.inline-block{
+  display: inline-block;
+}
+.physical-body .navbar-parent{
+  max-width: 1253px;
+  margin: 0 auto;
+  margin-top: -4px;
+}
+/*Srishty*/
  footer{
    max-width: 1260px !important;
   margin: 0 auto;
@@ -325,7 +338,104 @@ width: 100%;
   -webkit-box-shadow:none;
   border-bottom:none;
  }
+ .physical-body{
+  /*   */
+background-image: url(../images/gplay.png), linear-gradient(#ed217c, #fbd0e3) !important;
+/* background: url(../images/dark-mosaic.png),  linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite; */
+ }
+ .mental-art-post-page .card .card-img-top{
+  object-fit: scale-down !important;
+ }
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
 
+@-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+ .physical-body #container-fluid{
+  /* background: #bc4e9c;  
+  background: -webkit-linear-gradient(to top, #f80759, #bc4e9c); 
+  background: linear-gradient(to top, #f80759, #bc4e9c); */
+ }
+ .container.physical-post-page{
+  background:#e3e3e3;}
+ #sub-header .navbar{
+    background: #e2e2e2; /* Old browsers */
+background: -moz-linear-gradient(top, #e2e2e2 0%, #dbdbdb 50%, #d1d1d1 51%, #fefefe 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #e2e2e2 0%,#dbdbdb 50%,#d1d1d1 51%,#fefefe 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #e2e2e2 0%,#dbdbdb 50%,#d1d1d1 51%,#fefefe 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
+  }
+.container.physical-post-page h1{
+    margin-top: 0px;
+    padding-top: 11px;
+    margin-bottom: 9px;
+}
+.physical-body .fitgirlinc-footer-socialLinks,.physical-body br,.physical-body hr{
+  display:none;
+}
+  .vertical-ad-banner{
+
+  }
+.vertical-ad-banner .advertisement{
+  border:1px solid black;
+  width: 100%;
+  height:600px;
+}
+
+    #soon-glow {
+        font-family: 'Quicksand', sans-serif;
+         color:#fff;
+          background-color:#f13446;
+         background-image:linear-gradient(30deg, #F13B6F,#FC9E2C);
+         text-transform:lowercase;
+     }
+        #soon-glow .soon-label {
+           color:#fff;
+            text-shadow:0 0 .25rem rgba(255,255,255,.75);
+             }
+       #soon-glow .soon-ring-progress {
+             color:#fff;
+           background-color:rgba(255,255,255,.15);
+               }
+        #soon-glow>.soon-group {
+           margin-bottom:-.5em;
+             }
+/*Srishty*/
   @media (max-width: 575px) {
     .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
       color: #ecf0f1;
@@ -354,7 +464,7 @@ width: 100%;
     }
   }
 
-  @media (max-width: 991px) {
+  /* @media (max-width: 991px) {
     .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
       color: #ecf0f1;
     }
@@ -366,7 +476,7 @@ width: 100%;
       color: #fcfbfe;
       background-color: #e07dc4;
     }
-  }
+  } */
 
   @media (max-width: 991px) {
     .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
@@ -402,7 +512,15 @@ margin-top: 3rem!important;
       background-color: #e07dc4;
     }
   }
-
+  @media (min-width: 1200px){
+    .container.physical-post-page{
+      max-width: 1254px;
+    padding: 0 22px;
+    }
+    .container .physical-post-page{
+    max-width: 1220px;
+    }
+  }
   /* .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
     color: #ecf0f1;
   }
@@ -438,7 +556,49 @@ and (orientation : portrait) {
 
 /* iPad in portrait & landscape */
 @media only screen and (min-width : 768px) and (max-width : 1024px)  { 
+
+/* added space on logout, reset done, change done - hghanta*/
+.spacer-div-30{
+    width: 100%;
+    height: 30px;
 }
+
+.box-center{
+  margin: 0 auto;
+  text-align: center;
+}
+
+/*coloring app styles_Kelley*/
+#coloring-app {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
+#coloring-app iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+#coloring-app-att{
+    text-align: center;
+    margin-bottom: 30px;
+}
+/*coloring app styles ends here_Kelley*/
+
+/* iPad in portrait & landscape */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  { /* STYLES GO HERE */}
 
 /* iPad in landscape */
 @media only screen
